--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   hexcolor: ^2.0.6
   sizer: ^2.0.15
   http: ^0.13.4
+  custom_navigation_bar: ^0.8.2
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
