--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   http: ^0.13.4
   custom_navigation_bar: ^0.8.2
   shimmer: ^2.0.0
+  flutter_zoom_drawer: ^3.0.1
 
 dev_dependencies:
   flutter_test:
