--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   shimmer: ^2.0.0
   flutter_zoom_drawer: ^3.0.1
   package_info_plus: ^1.4.2
+  expandable_text: ^2.3.0
+  firebase_storage: ^10.2.14
+  firebase_auth: ^3.3.16
+  firebase_core: ^1.15.0
 
 dev_dependencies:
   flutter_test:
