--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   firebase_auth: ^3.3.16
   firebase_core: ^1.15.0
   image_picker: ^0.8.5
+  qr_flutter: ^3.2.0
+  qr_code_scanner: ^0.7.0
 
 dev_dependencies:
   flutter_test:
