--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   image_picker: ^0.8.5
   qr_flutter: ^3.2.0
   qr_code_scanner: ^0.7.0
+  animations: ^2.0.2
 
 dev_dependencies:
   flutter_test:
