--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,28 +33,29 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  shared_preferences: ^2.0.13
-  provider: ^6.0.2
-  flutter_easyloading: ^3.0.3
-  get: ^4.6.1
-  google_fonts: ^2.3.1
-  hexcolor: ^2.0.6
-  sizer: ^2.0.15
-  http: ^0.13.4
-  custom_navigation_bar: ^0.8.2
-  shimmer: ^2.0.0
-  flutter_zoom_drawer: ^3.0.1
-  package_info_plus: ^1.4.2
-  expandable_text: ^2.3.0
-  firebase_storage: ^10.2.14
-  firebase_auth: ^3.3.16
-  firebase_core: ^1.15.0
-  image_picker: ^0.8.5
-  qr_flutter: ^3.2.0
-  qr_code_scanner: ^0.7.0
-  animations: ^2.0.2
 
+  animations: ^2.0.2
+  cupertino_icons: ^1.0.4
+  custom_navigation_bar: ^0.8.2
+  expandable_text: ^2.3.0
+  firebase_auth: ^3.3.18
+  firebase_core: ^1.17.0
+  firebase_storage: ^10.2.16
+  flutter_easyloading: ^3.0.5
+  flutter_zoom_drawer: ^3.0.2
+  get: ^4.6.5
+  google_fonts: ^3.0.1
+  hexcolor: ^2.0.7
+  http: ^0.13.4
+  image_picker: ^0.8.5+3
+  package_info_plus: ^1.4.2
+  provider: ^6.0.3
+  qr_flutter: ^4.0.0
+  shared_preferences: ^2.0.15
+  shimmer: ^2.0.0
+  sizer: ^2.0.15
+  flutter_barcode_scanner: ^2.0.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -64,7 +65,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
