--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   shimmer: ^2.0.0
   sizer: ^2.0.15
   flutter_barcode_scanner: ^2.0.0
+  multi_select_flutter: ^4.1.2
   
 dev_dependencies:
   flutter_test:
