--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   sizer: ^2.0.15
   flutter_barcode_scanner: ^2.0.0
   multi_select_flutter: ^4.1.2
+  encrypt: ^5.0.1
   
 dev_dependencies:
   flutter_test:
