--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   multi_select_flutter: ^4.1.2
   encrypt: ^5.0.1
+  syncfusion_flutter_xlsio: ^20.1.59-beta
+  open_file: ^3.2.1
+  path_provider: ^2.0.11
   
 dev_dependencies:
   flutter_test:
