--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   syncfusion_flutter_xlsio: ^20.1.59-beta
   open_file: ^3.2.1
   path_provider: ^2.0.11
+  url_launcher: ^6.1.3
+  mailto: ^2.0.0
   
 dev_dependencies:
   flutter_test:
