--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   path_provider: ^2.0.11
   url_launcher: ^6.1.3
   mailto: ^2.0.0
+  connectivity_plus: ^2.3.4
   
 dev_dependencies:
   flutter_test:
