--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   url_launcher: ^6.1.3
   mailto: ^2.0.0
   connectivity_plus: ^2.3.4
+  device_info_plus: ^3.2.4
   
 dev_dependencies:
   flutter_test:
