--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   mailto: ^2.0.0
   connectivity_plus: ^2.3.4
   device_info_plus: ^3.2.4
+  fluttertoast: ^8.0.9
   
 dev_dependencies:
   flutter_test:
